Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-11594

Crash when trying to run Plain C++ Project (Qbs Build)

    XMLWordPrintable

Details

    • 54e76a72d81e7246e60fe5714ee78951bd4c24d0

    Description

      1. Create a new project using "File" -> "New File or Project..." -> "Non-Qt Project" -> "Plain C++ Project (Qbs Build)".
      2. Go to Projects mode, run configuration.
      3. Try running the project.
        It does not work. Instead, you see the "Custom Executable" dialog. This is QTCREATORBUG-11593.
      4. Cancel the dialog.
      5. Close the project.
      6. Repeat steps 2 to 4.
        Creator crashes.

      Attachments

        1. stacktrace.txt
          2 kB
        2. xlarge.txt
          25 kB
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            hunger Tobias Hunger
            rlohning Robert Löhning
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes